# chartlyrics-rs

./: Cargo.toml  README.md
src/: api.rs  lib.rs
src/client/: get_lyrics.rs  mod.rs  search_lyric_direct.rs  search_lyric_text.rs
src/models/: mod.rs
