[package]
name = "chartlyrics"
description = "Rust bindings for the ChartLyrics lyric API"
version = "0.1.1"
edition = "2024"
authors = ["Marley <marley@marlstar.com>"]
homepage = "https://github.com/Marlstar/chartlyrics-rs"
repository = "https://github.com/Marlstar/chartlyrics-rs"
keywords = ["lyric", "lyrics", "ChartLyrics"]
license = "MIT"

[dependencies]
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
url-escape = "0.1.1"

[features]
default = ["async"]
async = []
blocking = ["reqwest/blocking"]
